610-cathistogram: fixed issue with text wrap on cat histogram (#614)

--- a/src/components/CatHistogram/CatHistogram.module.scss
+++ b/src/components/CatHistogram/CatHistogram.module.scss
@@ -42,6 +42,7 @@
       padding-left: var(--margin-3);
       line-height: 14px;
       cursor: default;
+      white-space: nowrap;
     }
 
     &Value {
